# Youtube-Video-Scriptor

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  REPO_DESCRIPTION.md  pyproject.toml
config/: __init__.py  default_config.py
specs/001-video-scene-extractor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  timestamp-mode-spec.md
specs/001-video-scene-extractor/checklists/: requirements.md
specs/001-video-scene-extractor/contracts/: cli-interface.yaml
src/: __init__.py  logger.py  main.py  models.py  output_formatter.py  speaker_identifier.py  transcript_extractor.py  url_validator.py
tests/: __init__.py  conftest.py
tests/contract/: __init__.py
tests/integration/: test_error_handling.py
tests/unit/: test_duration_validation.py  test_speaker_identifier.py  test_url_validator.py
