[project]
name = "youtube-scene-extractor"
version = "0.1.0"
description = "YouTube Video Scene Segmentation and Script Extraction Tool - Automatically divide YouTube videos into logical scene segments with extracted dialogue scripts for language learning and content analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notion-client<2.0",
    "python-dotenv>=1.2.1",
    "scenedetect[opencv]>=0.6",
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.1",
]
authors = [
    {name = "YouTube Scene Extractor Team"}
]
keywords = ["youtube", "video", "scene-detection", "transcription", "language-learning", "content-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
youtube-scene-extractor = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "black>=23.0",
    "pytest>=7.0",
    "pytest-mock>=3.12",
    "ruff>=0.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
