[project]
name = "youtube-transcript-extractor"
version = "0.1.0"
description = "Extract YouTube video transcripts with timestamp precision. Fast, simple, and easy to use."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "notion-client<2.0",
    "python-dotenv>=1.2.1",
    "youtube-transcript-api>=0.6",
    "yt-dlp>=2024.1",
]
authors = [
    {name = "YouTube Transcript Extractor Team"}
]
keywords = ["youtube", "transcript", "caption-extraction", "video-processing", "language-learning", "content-analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
yt-script = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "config"]

[tool.uv]
dev-dependencies = [
    "black>=23.0",
    "pytest>=7.0",
    "pytest-mock>=3.12",
    "ruff>=0.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
